--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 click==6.7
+cloudinary==1.8.0
 Flask==0.12.1
 Flask-SQLAlchemy==2.2
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+mock==2.0.0
+pbr==3.0.0
 psycopg2==2.7.1
 requests==2.13.0
+six==1.10.0
 SQLAlchemy==1.1.9
+urllib3==1.21.1
 virtualenv==15.1.0
 Werkzeug==0.12.1
